--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <style type="text/css">
 html,
-body {
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    height:95%;
-}
-
-#sketch {
-    border: 10px solid gray;
-    height: 100%;
-}
+body {margin: 0px; padding: 0px; width: 100%; height:95%;}
+#sketch {border: 10px solid gray; height: 100%;}
 </style>
 <div id = "sketch">
     <canvas id="paint"></canvas>
@@ -24,49 +15,30 @@ var sketch = document.querySelector('#sketch');
 var sketch_style = getComputedStyle(sketch);
 canvas.width = parseInt(sketch_style.getPropertyValue('width'));
 canvas.height = parseInt(sketch_style.getPropertyValue('height'));
-
-var mouse = {
-    x: 0,
-    y: 0
-};
-
-var last_mouse = {
-    x: 0,
-    y: 0
-};
-
-/* mouse capturing work*/
+var mouse = {x: 0, y: 0};
+var last_mouse = {x: 0, y: 0};
 canvas.addEventListener('mousemove', function(e) {
     last_mouse.x = mouse.x;
     last_mouse.y = mouse.y;
-
     mouse.x = e.pageX - this.offsetLeft;
     mouse.y = e.pageY - this.offsetTop;
 }, false);
-
-
-/*drawing on paint app*/
 ctx.lineWidth = 5;
 ctx.lineJoin = 'round';
 ctx.lineCap = 'round';
 ctx.strokeStyle = 'blue';
-
 canvas.addEventListener('mousedown', function(e) {
     canvas.addEventListener('mousemove', onPaint, false);
 }, false);
-
 canvas.addEventListener('mouseup', function() {
     canvas.removeEventListener('mousemove', onPaint, false);
 }, false);
-
 var onPaint = function() {
-
     ctx.beginPath();
     ctx.moveTo(last_mouse.x, last_mouse.y);
     ctx.lineTo(mouse.x, mouse.y);
     ctx.closePath();
     ctx.stroke();
-
     socket.emit('draw', {
         startx: last_mouse.x,
         starty: last_mouse.y,
@@ -74,11 +46,9 @@ var onPaint = function() {
         endy: mouse.y
     });
 };
-
 socket.on('draw', function(data){
   onPaint_repo(data.startx, data.starty, data.endx, data.endy);
 });
-
 var onPaint_repo = function(startx, starty, endx, endy) {
     ctx.beginPath();
     ctx.moveTo(startx, starty);
